alignment of search buttons fixed again

--- a/src/app/results/results.component.css
+++ b/src/app/results/results.component.css
@@ -167,7 +167,7 @@ a {
 
 #search-options {
   margin-top: 0.5%;
-  margin-left: 9.2%;
+  margin-left: 9%;
 }
 
 #search-tools {
